Fixed title alignment issue

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -82,6 +82,10 @@
   }
 }
 
+.post-content {
+  h1, h2, h3, h4, h5, h6 { text-align: left; }
+}
+
 .back-link {
   display: inline-block;
   font-size: .75em;
