--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,34 +14,34 @@ h1 {
 h2 {
   font-size: 2em;
   margin: 1em auto;
-  text-align: left;
+  text-align: center;
 }
 
 h3 {
   font-size: 1.5em;
   margin: 1em auto;
-  text-align: left;
+  text-align: center;
 }
 
 h4 {
   font-size: 1.25em;
   font-style: italic;
   margin: 1.25em auto;
-  text-align: left;
+  text-align: center;
 }
 
 h5 {
   font-size: 1em;
   font-style: italic;
   margin: 1.5em auto;
-  text-align: left;
+  text-align: center;
 }
 
 h6 {
   font-size: .875em;
   font-style: italic;
   margin: 2.25em auto;
-  text-align: left;
+  text-align: center;
 }
 
 em {
